samples/_failures_safe/1761309209_aed972_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_313b0480.c: In function ‘main’:
./samples/SAFE/__tmp_313b0480.c:147:5: error: expected expression at end of input
  147 |     if (result.data == NULL)
      |     ^~
./samples/SAFE/__tmp_313b0480.c:147:5: error: expected declaration or statement at end of input
